# ChangeLog for sys-devel/gcc
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-devel/gcc/ChangeLog,v 1.652 2008/06/10 22:31:27 jer Exp $

  10 Jun 2008; Jeroen Roovers <jer@gentoo.org> gcc-4.3.1.ebuild:
  Marked ~hppa too.

  09 Jun 2008; Mike Frysinger <vapier@gentoo.org> gcc-4.3.1.ebuild:
  Force newer glibc on amd64 to workaround multilib header issue.

*gcc-4.3.1 (09 Jun 2008)

  09 Jun 2008; Mike Frysinger <vapier@gentoo.org> +gcc-4.3.1.ebuild:
  Version bump.

*gcc-4.2.4 (23 May 2008)

  23 May 2008; Mike Frysinger <vapier@gentoo.org> +gcc-4.2.4.ebuild:
  Version bump.

  10 May 2008; Mike Frysinger <vapier@gentoo.org> gcc-4.3.0.ebuild:
  Drop ia64 libunwind patch and fix ice on ppc building mplayer.

  20 Apr 2008; Mike Frysinger <vapier@gentoo.org> gcc-4.3.0.ebuild:
  Revert cld behavior (for now), add back GNU-stack fixes for libffi, and add
  fixes for upstream PR24170, PR27880, PR34571, PR35440, PR35705.

  20 Mar 2008; Mike Frysinger <vapier@gentoo.org> gcc-2.95.3-r9.ebuild,
  gcc-2.95.3-r10.ebuild, gcc-3.2.3-r4.ebuild, gcc-3.3.6-r1.ebuild,
  gcc-3.4.6-r2.ebuild, gcc-4.0.3.ebuild, gcc-4.0.4.ebuild,
  gcc-4.1.0-r1.ebuild, gcc-4.1.1-r3.ebuild, gcc-4.1.2.ebuild,
  gcc-4.2.0.ebuild, gcc-4.2.1.ebuild, gcc-4.2.2.ebuild, gcc-4.2.3.ebuild,
  gcc-4.3.0.ebuild:
  Drop eselect-compiler from DEPENDs since it has been dropped from the tree.

  18 Mar 2008; Mike Frysinger <vapier@gentoo.org> gcc-4.3.0.ebuild:
  Fold mpfr/gmp depend updates from toolchain overlay #213687.

*gcc-4.3.0 (17 Mar 2008)

  17 Mar 2008; Mike Frysinger <vapier@gentoo.org> +gcc-4.3.0.ebuild:
  Version bump.

  16 Mar 2008; Mike Frysinger <vapier@gentoo.org> gcc-4.1.2.ebuild:
  Post minor avr/mips updates.

  19 Feb 2008; Mike Frysinger <vapier@gentoo.org> files/awk/fixlafiles.awk:
  Fix from Roy Marples to fixup portability #210590.

  16 Feb 2008; Mike Frysinger <vapier@gentoo.org> gcc-4.2.3.ebuild: