@@ -1,6 +1,6 @@
 # Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-devel/gcc/gcc-4.3.1.ebuild,v 1.3 2008/06/10 22:31:27 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-devel/gcc/gcc-4.3.1.ebuild,v 1.4 2008/06/21 04:23:11 vapier Exp $
 
 EAPI="prefix"
 
@@ -57,7 +57,7 @@ DEPEND="${RDEPEND}
 	) )"
 PDEPEND=">=sys-devel/gcc-config-1.4"
 if [[ ${CATEGORY} != cross-* ]] ; then
-	PDEPEND="${PDEPEND} !prefix? ( elibc_glibc? ( >=sys-libs/glibc-2.3.6 ) )"
+	PDEPEND="${PDEPEND} !prefix? ( elibc_glibc? ( >=sys-libs/glibc-2.6 ) )"
 fi
 
 src_unpack() {
